codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__misalignment_turn_end_cleared_composer.snap
---
source: tui/src/chatwidget/tests/misalignment_policy_tests.rs
assertion_line: 230
expression: "normalize_snapshot_paths(render_bottom_popup(&chat, 80))"
---
 Elpis · model gpt-5.6-sol default · location /tmp/project
────────────────────────────────────────────────┐ CONTEXT LEDGER  context not
› Ask Elpis to do anything                      │ measured · ≈0 source
────────────────────────────────────────────────┤ estimates
  esc esc to edit previous message              │ Tab controls · Alt+C hide ·
                                                │ Ctrl+click open file
                                                │
                                                │ SMART PRUNE       [···] SYNC
                                                │ Reading current thread state
                                                │ Syncing… · /smart-prune on|
                                                │ off sets an explicit state
                                                │
                                                │ SUBAGENTS          [━━━●] ON
                                                │ May delegate to other agents
                                                │
                                                │ CONTEXT WINDOW  usage
                                                │ unavailable
                                                │ Context measurement
                                                │ unavailable until the first
                                                │ request snapshot
                                                │
                                                │ No portable context is
                                                │ available.
